--- a/Meadow/Meadow.csproj
+++ b/Meadow/Meadow.csproj
@@ -6,5 +6,7 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Meadow.Foundation" Version="0.*" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+  <Import Project="..\Connect\Connect.projitems" Label="Shared" />
 </Project>
